--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,3 +28,40 @@ services:
     labels:
       - "traefik.port=8080"
       - "traefik.frontend.rule=Host:ci.lukas-coding.us"
+  storage:
+    image: nextcloud
+    environment:
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_HOST=db 
+      - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
+      - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
+    expose:
+      - "80"
+    volumes:
+      - ./nextcloud:/var/www/html
+    restart: on-failure
+    labels:
+      - "traefik.port=80"
+      - "traefik.frontend.rule=Host:storage.lukas-coding.us"
+
+  db:
+    image: mariadb
+    restart: on-failure
+    expose:
+      - "3306"
+    volumes:
+      - ./postgres:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD} 
+      - MYSQL_DATABASE=nextcloud
+
+  ocr:
+    image: lherman/ocr
+    restart: on-failure
+    expose:
+      - "8080"
+    labels:
+      - "traefik.port=8080"
+      - "traefik.frontend.rule=Host:ocr.lukas-coding.us"
