Added ssh to ci and put jenkins.Dockerfile in dockerfiles

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,9 @@ services:
       - "traefik.port=8080"
       - "traefik.frontend.rule=Host:monitor.lukas-coding.us"
   ci:
+    build:
+      context: ./dockerfiles
+      dockerfile: jenkins.Dockerfile
     image: lherman/jenkins
     expose:
       - "8080"
